--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Vocab Feature Branches Project = Repository (repo) Working Directory Commit = Git's way of 'saving' Staging = Control what gets commited // #1 Node packages - Automation - Build tools - Server tasks #2 Other Things - Lodash - Bootstrap - Normalize.css",
   "main": "test.js",
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "lodash": "^4.17.15",
     "normalize.css": "^8.0.1"
   },
